crates/plotnik-tests/tests/02-parser/recovery_validation/capture_type_lowercase_punctuation.txt
Q = (identifier) @value :: bad-name
------------------ DIAGNOSTICS -------------------
error: capture type names cannot contain punctuation or custom-name separators
 --> query.ptk:1:28
  |
1 | Q = (identifier) @value :: bad-name
  |                            ^^^^^^^^
